--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-.project 
-.classpath 
-.settings/ 
-target/ 
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+.classpath
+.project
+.settings/
