--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>com.wordnik</groupId>
 			<artifactId>swagger-annotations</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.5.2-M1</version>
 		</dependency>
 	</dependencies>
 
