--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
 .classpath
 .project
 .settings/
+/build/
+/bin/
+.gradle/
